--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ a:hover {
   color: #4b4949;
 }
 
+.portfolioLink {
+}
+.portfolioLink:hover {
+  text-decoration: underline;
+  opacity: 0.8;
+}
+
 .footerImg {
   max-width: 35px;
   margin: 8px;
